[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "griffe-autodocstringstyle"
description = "Set docstring style to 'auto' for external packages."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "griffe>=0.49",
]

[project.urls]
Homepage = "https://mkdocstrings.github.io/griffe-autodocstringstyle"
Documentation = "https://mkdocstrings.github.io/griffe-autodocstringstyle"
Changelog = "https://mkdocstrings.github.io/griffe-autodocstringstyle/changelog"
Repository = "https://github.com/mkdocstrings/griffe-autodocstringstyle"
Issues = "https://github.com/mkdocstrings/griffe-autodocstringstyle/issues"
Discussions = "https://github.com/mkdocstrings/griffe-autodocstringstyle/discussions"
Gitter = "https://gitter.im/mkdocstrings/griffe-autodocstringstyle"
Funding = "https://github.com/sponsors/pawamoy"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "devdeps.txt",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
data = [
    {path = "share/**/*", relative-to = "."},
]
